Lesson 10 Home Task: Queries by separate models

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,8 +1,16 @@
 body {
     font-family: sans-serif;
+    padding: 1em;
 }
 .dbtable {
     background: #ffe;
+    border-spacing: 0;
+    box-shadow: .1em .1em 1em .1em silver;
+}
+.dbtable th,
+.dbtable td {
+    border: thin solid silver;
+    border-width: 0 thin thin 0;
 }
 .dbtable th {
     color: white;
@@ -12,7 +20,5 @@ body {
 }
 .dbtable td {
     padding: .5em 1em;
-    border: thin solid silver;
-    border-width: 0 thin thin 0;
     text-align: right;
 }
